<resources>
    <string name="app_name">banghac_mobile_app</string>
    <string name="name">이용자 이름</string>
    <string name="email">이메일을 입력하세요</string>
    <string name="pass">비밀번호를 입력하세요</string>
    <string name="pass_check">비밀번호를 재입력하세요</string>
    <string name="wellcome">환영합니다</string>
    <string name="account_login">계정 로그인</string>
    <string name="account_make">계정 만들기</string>
    <string name="login_google">구글 로그인</string>
    <string name="login_kakao">카카오 로그인</string>
    <string name="login_naver">네이버 로그인</string>
    <string name="keep_going">계속</string>
    <string name="account_question">계정이 없으신가요? </string>
    <string name="sign_up"> 회원가입</string>
    <string name="forget_pass"> 비밀번호를 잊으셨나요?</string>
    <string name="pass_reset"> 비밀번호 찾기</string>
    <string name="account_info"> 계정 정보</string>

    <string name="menu_bar_profile">Profile</string>
    <string name="menu_bar_map">Map</string>
    <string name="menu_bar_plan">Plan</string>
    <string name="menu_bar_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>