<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="#D7F1FA">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wellcome"
            android:textColor="#969696"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/login_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_login"
            android:textStyle="bold"
            android:textSize="30sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/google_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/google"
        android:text="@string/login_google"
        android:textSize="18dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="2dp"/>
    <Button
        android:id="@+id/kakao_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/kakao_icon"
        android:text="@string/login_kakao"
        android:textSize="18dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>
    <Button
        android:id="@+id/naver_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/naver_icon"
        android:text="@string/login_naver"
        android:textSize="18dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/mail_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="25dp"
        android:hint="@string/email"
        android:background="@drawable/add_line" />
    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/black_eye"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="15dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="25dp"
        android:hint="@string/pass"
        android:background="@drawable/add_line" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keep_going"
        android:textSize="18dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/add_line"
        android:backgroundTint="#1478FF"
        android:textColor="@color/white"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_question"/>
        <TextView
            android:id="@+id/sign_up_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="#0000FF"/>
    </LinearLayout>
</LinearLayout>