<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#D7F1FA">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#969696"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/login_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_make"
            android:textStyle="bold"
            android:textSize="30sp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/human_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="50dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="25dp"
        android:hint="@string/name"
        android:background="@drawable/add_line" />
    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/mail_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="25dp"
        android:hint="@string/email"
        android:background="@drawable/add_line"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/black_eye"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="15dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="25dp"
        android:hint="@string/pass"
        android:background="@drawable/add_line"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/passwordCheckEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/black_eye"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="15dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="25dp"
        android:hint="@string/pass_check"
        android:background="@drawable/add_line"
        android:inputType="textPassword" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keep_going"
        android:textSize="18dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/add_line"
        android:backgroundTint="#1478FF"
        android:textColor="@color/white"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

</LinearLayout>