<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F8FD">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent" >
        <Button
            android:id="@+id/btnHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F4F8FD"
            android:drawableTop="@drawable/ic_menu_bar_home"
            android:text="@string/menu_bar_home"
            android:textSize="12dp"
            android:layout_weight="1" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F4F8FD"
            android:drawableTop="@drawable/ic_menu_bar_calendar"
            android:text="@string/menu_bar_plan"
            android:textSize="12dp"
            android:layout_weight="1" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F4F8FD"
            android:drawableTop="@drawable/ic_menu_bar_map"
            android:text="@string/menu_bar_map"
            android:textSize="12dp"
            android:layout_weight="1" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F4F8FD"
            android:drawableTop="@drawable/ic_menu_bar_profile"
            android:text="@string/menu_bar_profile"
            android:textSize="12dp"
            android:layout_weight="1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>